--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\FAMILIA\\.virtualenvs\\PetQR-zP1ti4OT\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\CARIDAD\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
